--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,27 @@
-[package]
-name = "project02b-tport"
-version = "0.1.0"
-edition = "2018"
+[workspace]
+members = [
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package]
+name = "c2rust_out"
+authors = ["C2Rust"]
+version = "0.0.0"
+publish = false
+edition = "2018"
+autobins = false
+
+[lib]
+name = "c2rust_out"
+path = "c2rust-lib.rs"
+crate-type = ["staticlib", "rlib"]
+
+
+[[bin]]
+path = "src/compiler.rs"
+name = "compiler"
 
 [dependencies]
+libc = "0.2"
+
+
+
