convert the parser to safe rust, still have some functions to finish implementation on, but things safely compile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "makefile.extensionOutputFolder": "./.vscode"
+    "makefile.extensionOutputFolder": "./.vscode",
+    "files.associations": {
+        "compile.h": "c",
+        "ast.h": "c"
+    }
 }
