--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,18 @@ edition = '2021'
 [dependencies]
 # libc = "0.2"
 
+[dev-dependencies]
+# https://rust-cli.github.io/book/tutorial/testing.html 
+# the Rust CLI working group suggests these two crates for writing tests. 
+assert_cmd = "2"
+predicates = "2"
+console = "0.15"
+# grep = "0.2"
+
+[dev-dependencies.similar]
+version = "2"
+features = ["text", "bytes", "inline"]
+
 
 
 
