stage5 compilation tests pass

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ debug = true
 # These are only used for the testing/development environment
 [dev-dependencies]
 # https://rust-cli.github.io/book/tutorial/testing.html 
-# the Rust CLI working group suggests these two crates for writing tests. 
+# the Rust CLI working group suggests these crates for writing tests and benchmarks. 
 assert_cmd = "2"
 # predicates = "2"
 console = "0.15"
