stage6 compilation tests pass

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,11 +30,15 @@ assert_cmd = "2"
 # predicates = "2"
 console = "0.15"
 # grep = "0.2"
-criterion = "0.3"
+
 
 [dev-dependencies.similar]
 version = "2"
 features = ["text", "bytes", "inline"]
+
+[dev-dependencies.criterion]
+version = "0.3"
+features = ["html_reports"]
 
 [[bench]]
 name = "optimizing_compiler"
